package br.edu.pucminas.biblioteca.modelo;

/** Categoria a que o eBook pertence. */
public enum Categoria {
    LITERATURA,
    TECNICO,
    PERIODICO
}
