package br.edu.pucminas.biblioteca.modelo;

/** Formato de arquivo do eBook. */
public enum Formato {
    PDF,
    EPUB
}
