package br.edu.pucminas.biblioteca.modelo;

/** Tipo de leitura de um eBook na estante do aluno. */
public enum TipoLeitura {
    OBRIGATORIA,
    LIVRE
}
