@startuml diagrama_de_classes_ebooks
skinparam classAttributeIconSize 0
hide empty members

package modelo {

' ===== UC01 - Realizar login =====
abstract class Usuario implements Serializable {
  -id: String
  -nome: String
  -senha: String
  +autenticar(senhaInformada: String): boolean
  +getId(): String
  +getNome(): String
  +getSenha(): String
}

class Aluno {
  -matricula: String
  -estante: Estante
  +adicionarEBook(ebook: EBook, tipo: TipoLeitura, periodo: PeriodoAcesso, data: LocalDate, estatisticas: SistemaEstatisticas): boolean
  +removerEBook(ebook: EBook, periodo: PeriodoAcesso, data: LocalDate): boolean
  +acessarEBook(ebook: EBook): boolean
  +encerrarAcessoEBook(ebook: EBook): boolean
  +getMatricula(): String
  +getEstante(): Estante
}

class Bibliotecario {
  -registroFuncional: String
  +cadastrarEBook(ebook: EBook, catalogo: Catalogo): void
  +consultarAlunosComEBook(ebook: EBook, alunos: List<Aluno>): List<Aluno>
  +renovarCatalogo(catalogo: Catalogo, alunos: List<Aluno>): Catalogo
  +getRegistroFuncional(): String
}

' ===== UC02 e UC03 - Adicionar e remover eBook da estante =====
class Estante {
  -LIMITE_OBRIGATORIOS: int
  -LIMITE_LIVRES: int
  -itens: List<ItemEstante>
  +adicionar(ebook: EBook, tipo: TipoLeitura, periodo: PeriodoAcesso, data: LocalDate): boolean
  +remover(ebook: EBook, periodo: PeriodoAcesso, data: LocalDate): boolean
  +restaurar(item: ItemEstante): void
  +descartarNaoLicenciados(licenciados: List<EBook>): int
  +listar(): List<ItemEstante>
  +contarPorTipo(tipo: TipoLeitura): int
  +contemEBook(ebook: EBook): boolean
  +vagasRestantes(tipo: TipoLeitura): int
  -limiteDe(tipo: TipoLeitura): int
}

class ItemEstante {
  -ebook: EBook
  -tipo: TipoLeitura
  -dataAdicao: LocalDate
  +getEBook(): EBook
  +getTipo(): TipoLeitura
  +getDataAdicao(): LocalDate
  +toString(): String
}

enum TipoLeitura {
  OBRIGATORIA
  LIVRE
}

' ===== UC05 - Cadastrar eBook =====
class EBook {
  -titulo: String
  -editora: String
  -formato: Formato
  -categoria: Categoria
  -licenca: Licenca
  +getTitulo(): String
  +getEditora(): String
  +getFormato(): Formato
  +getCategoria(): Categoria
  +getLicenca(): Licenca
  +equals(outro: Object): boolean
  +hashCode(): int
  +toString(): String
}

enum Formato {
  PDF
  EPUB
}

enum Categoria {
  LITERATURA
  TECNICO
  PERIODICO
}

' ===== UC04 - Acessar eBook =====
class Licenca {
  +{static} LIMITE_MAXIMO_SIMULTANEOS: int = 60
  -limiteAcessosSimultaneos: int
  -acessosAtivos: int
  +temVagaDisponivel(): boolean
  +ocuparAcesso(): boolean
  +liberarAcesso(): void
  +getAcessosAtivos(): int
  +getLimiteAcessosSimultaneos(): int
}

' ===== UC08 - Renovar catalogo do semestre =====
class Catalogo {
  -semestre: String
  -{static} MINIMO_ALUNOS_RENOVACAO: int = 3
  -ebooks: List<EBook>
  -periodosAcesso: List<PeriodoAcesso>
  +adicionarEBook(ebook: EBook): void
  +removerEBook(ebook: EBook): void
  +listarEBooks(): List<EBook>
  +buscarPorTitulo(titulo: String): EBook
  +adicionarPeriodo(periodo: PeriodoAcesso): void
  +listarPeriodos(): List<PeriodoAcesso>
  +periodoAbertoEm(data: LocalDate): PeriodoAcesso
  +podeAdicionar(ebook: EBook, data: LocalDate): boolean
  +periodoDeAcessoEncerrado(data: LocalDate): boolean
  +renovar(alunos: List<Aluno>): Catalogo
  +contarAlunosCom(ebook: EBook, alunos: List<Aluno>): int
  +getSemestre(): String
  -proximoSemestre(): String
}

class PeriodoAcesso {
  -dataInicio: LocalDate
  -dataFim: LocalDate
  +estaAberto(data: LocalDate): boolean
  +jaEncerrou(data: LocalDate): boolean
  +getDataInicio(): LocalDate
  +getDataFim(): LocalDate
}

' ===== UC07 - Registrar estatistica de uso =====
class SistemaEstatisticas {
  -adicoesPorTitulo: Map<String, Integer>
  +registrarAdicao(ebook: EBook): void
  +consultarTotalAdicoes(ebook: EBook): int
  +restaurarAdicoes(titulo: String, total: int): void
  +listarAdicoes(): Map<String, Integer>
}

}

' ===== Interface e persistencia, acrescentadas na Sprint 3 =====
package interface <<Rectangle>> {
  class MenuPrincipal {
    ~{static} catalogo: Catalogo
    ~{static} usuarios: List<Usuario>
    ~{static} estatisticas: SistemaEstatisticas
    +{static} main(args: String[]): void
    +{static} menu(): int
    +{static} menuAluno(aluno: Aluno): int
    +{static} menuBibliotecario(bibliotecario: Bibliotecario): int
    +{static} selecionar(titulo: String, itens: List<T>): T
  }
}

package persistencia <<Rectangle>> {
  class BibliotecaRepositorioArquivo {
    -ARQUIVO: String
    +salvar(catalogo: Catalogo, usuarios: List<Usuario>, estatisticas: SistemaEstatisticas): void
    +carregar(): Dados
    +dadosIniciais(): Dados
  }
  class Dados {
    +catalogo: Catalogo
    +usuarios: List<Usuario>
    +estatisticas: SistemaEstatisticas
  }
  BibliotecaRepositorioArquivo ..> Dados : devolve
}

' ===== Relacionamentos =====
Usuario <|-- Aluno
Usuario <|-- Bibliotecario

Aluno "1" *-- "1" Estante
Estante "1" *-- "0..6" ItemEstante
Estante ..> PeriodoAcesso : valida janela
Aluno ..> SistemaEstatisticas : notifica a adicao
ItemEstante "0..*" o-- "1" EBook
ItemEstante --> TipoLeitura

EBook "1" -- "1" Licenca
EBook --> Formato
EBook --> Categoria

Catalogo "1" o-- "0..*" EBook
Catalogo "1" *-- "0..*" PeriodoAcesso

SistemaEstatisticas "1" ..> "0..*" EBook : registra uso

MenuPrincipal ..> Usuario
MenuPrincipal ..> Catalogo
MenuPrincipal ..> SistemaEstatisticas
MenuPrincipal ..> BibliotecaRepositorioArquivo

@enduml
